[gd_scene load_steps=4 format=3 uid="uid://eihb63i65s1q"]

[ext_resource type="Script" uid="uid://b0cr0njh03c8f" path="res://GUI/settings.gd" id="1_lc11d"]

[sub_resource type="Theme" id="Theme_5jend"]

[sub_resource type="LabelSettings" id="LabelSettings_5jend"]
font_size = 32
outline_size = 3
outline_color = Color(0.95158, 0.95158, 0.95158, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_lc11d")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.00543)

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 500)
layout_mode = 2

[node name="Panel" type="Panel" parent="CenterContainer/MarginContainer"]
modulate = Color(0.99558, 0.99558, 0.99558, 1)
layout_mode = 2
theme = SubResource("Theme_5jend")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_5jend")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
tab_alignment = 1
current_tab = 0

[node name="Graphics" type="VBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Window mode" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/Window mode"]
layout_mode = 2
text = "Window mode:"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/Window mode"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="WindowMode_option" type="OptionButton" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/Window mode"]
layout_mode = 2
item_count = 3
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 1
popup/item_2/text = "Borderless"
popup/item_2/id = 2

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/HBoxContainer"]
layout_mode = 2
text = "Resolution:"

[node name="VSeparator" type="VSeparator" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="Resolution_option" type="OptionButton" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/HBoxContainer"]
layout_mode = 2
item_count = 11
popup/item_0/text = "1920 x 1080"
popup/item_0/id = 0
popup/item_1/text = "1792 x 1008"
popup/item_1/id = 1
popup/item_2/text = "1664 x 936"
popup/item_2/id = 2
popup/item_3/text = "1536 x 864"
popup/item_3/id = 3
popup/item_4/text = "1408 x 792"
popup/item_4/id = 4
popup/item_5/text = "1280 x 720"
popup/item_5/id = 5
popup/item_6/text = "1152 x 648"
popup/item_6/id = 6
popup/item_7/text = "1024 x 576"
popup/item_7/id = 7
popup/item_8/text = "896 x 504"
popup/item_8/id = 8
popup/item_9/text = "768 x 432"
popup/item_9/id = 9
popup/item_10/text = "640 x 360"
popup/item_10/id = 10

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Fov" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/Fov"]
layout_mode = 2
text = "FOV:"

[node name="VSeparator" type="VSeparator" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/Fov"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="FOV_slider" type="HSlider" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/Fov"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
min_value = 40.0
max_value = 140.0
value = 90.0
rounded = true
tick_count = 100

[node name="FOV_Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/Fov"]
layout_mode = 2

[node name="View_distance" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/View_distance"]
layout_mode = 2
text = "View Distance:"

[node name="VSeparator" type="VSeparator" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/View_distance"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="ViewDistance_Slider" type="HSlider" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/View_distance"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
min_value = 40.0
max_value = 140.0
value = 90.0
rounded = true
tick_count = 100

[node name="ViewDistance_label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/View_distance"]
layout_mode = 2

[node name="Audio" type="VBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Master" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/Master"]
layout_mode = 2
text = "Master Volume:   "

[node name="VSeparator" type="VSeparator" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/Master"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Master_Slider" type="HSlider" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/Master"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 100.0
rounded = true
tick_count = 100

[node name="Master_label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/Master"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SFX" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/SFX"]
layout_mode = 2
text = "SFX Volume:         "

[node name="VSeparator" type="VSeparator" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/SFX"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="SFX_Slider" type="HSlider" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/SFX"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 100.0
rounded = true
tick_count = 100

[node name="SFX_label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/SFX"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Ambient" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/Ambient"]
layout_mode = 2
text = "Ambient Volume:"

[node name="VSeparator" type="VSeparator" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/Ambient"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Ambient_Slider" type="HSlider" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/Ambient"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 100.0
rounded = true
tick_count = 100

[node name="Ambient_label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/Ambient"]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Music" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/Music"]
layout_mode = 2
text = "Music Volume:     "

[node name="VSeparator" type="VSeparator" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/Music"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Music_Slider" type="HSlider" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/Music"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 100.0
rounded = true
tick_count = 100

[node name="Music_label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/Music"]
layout_mode = 2

[node name="Controls" type="VBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Controls"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Mouse Sensitivity" type="HBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Controls"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Controls/Mouse Sensitivity"]
layout_mode = 2
text = "Mouse Sensitivity:"

[node name="VSeparator" type="VSeparator" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Controls/Mouse Sensitivity"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="MouseSensitivity_Slider" type="HSlider" parent="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Controls/Mouse Sensitivity"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 100.0
rounded = true
tick_count = 100

[connection signal="item_selected" from="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/Window mode/WindowMode_option" to="." method="_on_window_mode_option_item_selected"]
[connection signal="item_selected" from="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/HBoxContainer/Resolution_option" to="." method="_on_resolution_option_item_selected"]
[connection signal="value_changed" from="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/Fov/FOV_slider" to="." method="_on_fov_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Graphics/View_distance/ViewDistance_Slider" to="." method="_on_view_distance_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/Master/Master_Slider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/SFX/SFX_Slider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/Ambient/Ambient_Slider" to="." method="_on_ambient_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Audio/Music/Music_Slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/MarginContainer/VBoxContainer/TabContainer/Controls/Mouse Sensitivity/MouseSensitivity_Slider" to="." method="_on_mouse_sensitivity_slider_value_changed"]
